<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <Switch
        android:id="@+id/camera_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/camera_enabled"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/camera_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:inputType="textCapSentences"
        android:minEms="12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_address"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0"
            android:text="@string/camera_http"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <EditText
            android:id="@+id/camera_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textCapSentences"
            android:minEms="9"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginLeft="4dp"
            android:text="@string/camera_8080"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>


</LinearLayout>